# ChessSupreme

./: .gitignore  CMakeLists.txt  README.md
include/: bitboard.h  chesshandler.h  engine.h  move.h  movegen.h  piece.h  position.h  search.h  utility.h
src/: bitboard.cpp  chesshandler.cpp  main.cpp  move.cpp  movegen.cpp  piece.cpp  position.cpp  utility.cpp
test/: bitboard_test.cpp  move_test.cpp  perft_test.cpp  piece_test.cpp  position_test.cpp  test_bitshift_interactive.cpp  test_pseudoattacks_interactive.cpp  utility_test.cpp
